[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://src/ui/overlays/base_overlay/base_overlay.tscn" id="1_fvnew"]
[ext_resource type="Script" uid="uid://d1xp5nmq7u7j6" path="res://src/ui/overlays/online_pause_overlay/online_pause_overlay.gd" id="2_94q2v"]

[node name="OnlinePauseOverlay" instance=ExtResource("1_fvnew")]
script = ExtResource("2_94q2v")

[node name="PausedLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
layout_mode = 2
text = "ONLINE PAUSE"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "SETTINGS"

[node name="AbortButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "ABORT MATCH"
